--- a/main.html
+++ b/main.html
@@ -8,6 +8,24 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form>
+		<label for="name">Name:</label>
+		<input type="text" placeholder="Name" id="name">
+		<label for=phone>Phone Number:</label>
+		<input type=text placeholder="Phone Number" id="phone">
+		<label for="address">Address:</label>
+		<input type="text" placeholder="Address">
+		<label for="checkbox">Have you ever lived with a Dog before?</label>
+		<input type="checkbox" id="checkbox">
+		<label for="multiSelect">Please select your preferred breeds</label>
+		<select name="dog_name" id="multiSelect">
+			<option value="dog_1">Dog_1</option>
+			<option value="dog_2">Dog_2</option>
+			<option value="dog_3">Dog_3</option>
+		</select>
+		<label id="submit"></label>
+		<input type="submit" id="submit">
+	</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
