--- a/main.html
+++ b/main.html
@@ -15,7 +15,10 @@
 		<input type=text placeholder="Phone Number" id="phone">
 		<label for="address">Address:</label>
 		<input type="text" placeholder="Address">
-		<label for="checkbox">Have you ever lived with a Dog before?</label>
+		<label>Have you ever lived with a Dog before?</label>
+		<label for="checkbox">Yes</label>
+		<input type="checkbox" id="checkbox">
+		<label for="checkbox">No</label>
 		<input type="checkbox" id="checkbox">
 		<label for="multiSelect">Please select your preferred breeds</label>
 		<select name="dog_name" id="multiSelect">
@@ -23,7 +26,7 @@
 			<option value="dog_2">Dog_2</option>
 			<option value="dog_3">Dog_3</option>
 		</select>
-		<label id="submit"></label>
+		<label id="submit">Submit</label>
 		<input type="submit" id="submit">
 	</form>
     <script type="text/javascript" src="./script.js">
