--- a/main.html
+++ b/main.html
@@ -14,7 +14,7 @@
 		<label for=phone>Phone Number:</label>
 		<input type=text placeholder="Phone Number" id="phone">
 		<label for="address">Address:</label>
-		<input type="text" placeholder="Address">
+		<input type="text" placeholder="Address" id="address">
 		<label>Have you ever lived with a Dog before?</label>
 		<label for="checkbox">Yes</label>
 		<input type="checkbox" id="checkbox">
@@ -26,7 +26,7 @@
 			<option value="dog_2">Dog_2</option>
 			<option value="dog_3">Dog_3</option>
 		</select>
-		<label id="submit">Submit</label>
+		<label for="submit"></label>
 		<input type="submit" id="submit">
 	</form>
     <script type="text/javascript" src="./script.js">
