--- a/main.html
+++ b/main.html
@@ -15,19 +15,16 @@
 		<input type=text placeholder="Phone Number" id="phone">
 		<label for="address">Address:</label>
 		<input type="text" placeholder="Address" id="address">
-		<label>Have you ever lived with a Dog before?</label>
-		<label for="checkbox">Yes</label>
-		<input type="checkbox" id="checkbox">
-		<label for="checkbox">No</label>
-		<input type="checkbox" id="checkbox">
-		<label for="multiSelect">Please select your preferred breeds</label>
+		<label for="checkbox1">Have you ever lived with a Dog before?</label>
+		<input type="checkbox" id="checkbox1" name="value">
+		<label for="multiSelect">Please select your preferred breeds:</label>
 		<select name="dog_name" id="multiSelect">
 			<option value="dog_1">Dog_1</option>
 			<option value="dog_2">Dog_2</option>
 			<option value="dog_3">Dog_3</option>
 		</select>
 		<label for="submit"></label>
-		<input type="submit" id="submit">
+		<input type="submit" name="yes" id="submit">
 	</form>
     <script type="text/javascript" src="./script.js">
 </script>
