--- a/main.html
+++ b/main.html
@@ -16,7 +16,7 @@
 		<label for="address">Address:</label>
 		<input type="text" placeholder="Address" id="address">
 		<label for="checkbox1">Have you ever lived with a Dog before?</label>
-		<input type="checkbox" id="checkbox1" name="Submit">
+		<input type="checkbox" id="checkbox1" value="Have you ever lived with a Dog before?">
 		<label for="multiSelect">Please select your preferred breeds:</label>
 		<select name="dog_name" id="multiSelect">
 			<option value="dog_1">Dog_1</option>
@@ -24,7 +24,7 @@
 			<option value="dog_3">Dog_3</option>
 		</select>
 		<label for="submit"></label>
-		<input type="submit" id="submit" name="Have you ever lived with a Dog before?">
+		<input type="submit" id="submit" value="submit">
 	</form>
     <script type="text/javascript" src="./script.js">
 </script>
